<resources>
    <string name="app_name">Linear_Use</string>
    <string name="textview">red</string>
    <string name="textview2">green</string>
    <string name="textview3">blue</string>
    <string name="textview4">yellow</string>
    <string name="textview1">red</string>
    <string name="textview5">row one</string>
    <string name="textview6">row two</string>
    <string name="textview7">row three</string>
    <string name="textview8">row four</string>
</resources>
